Fix problems with cropping

--- a/themes/OpenPsa2/static/jquery.ui.custom.css
+++ b/themes/OpenPsa2/static/jquery.ui.custom.css
@@ -1501,6 +1501,7 @@ ul.dynatree-container
 {
     border: none;
     padding: 0;
+    height: auto;
 }
 
 ul.dynatree-container span.dynatree-folder a
